# labeleva

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: public_api.md
examples/: _demo_embedding.py  basic_usage.py  create_techqa_test.py  custom_config.py  data_loading.py  evaluate_retrieval.py  fallback_policies.py  inspection_api.py  provider_answer.py  save_and_load.py  semantic_rerank.py  techqa_test.json
src/labelrag/: __init__.py  config.py  types.py
src/labelrag/data/: __init__.py  data_fitting.py  loader.py
src/labelrag/embedding/: __init__.py  provider.py  sentence_transformer.py  store.py
src/labelrag/evaluation/: __init__.py  evaluator.py  metrics.py  reporter.py
src/labelrag/generation/: __init__.py  generator.py  openai_compatible.py  prompt_builder.py
src/labelrag/indexing/: __init__.py  corpus_index.py
src/labelrag/io/: __init__.py  serialize.py
src/labelrag/pipeline/: __init__.py  rag_pipeline.py
src/labelrag/retrieval/: __init__.py  coverage.py  selector.py
tests/: conftest.py  support.py  test_answer.py  test_build_context.py  test_data_loading.py  test_embedding_provider.py  test_evaluation.py  test_fit.py  test_imports.py  test_inspection.py  test_openai_compatible.py  test_prompt_builder.py  test_query_analysis.py  test_retrieval.py  test_retrieval_helpers.py  test_serialization.py
